--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1/23/2017
+
+   Added microsite for the documentation.
+
 1/1/2017 Version 1.3.0
 
    Two new extensions: LambdaTestTiming and LambdaTestAsunc.
