--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
+4/15/2018 Versions 1.3.1
+
+
 1/23/2017
 
    Added microsite for the documentation.
 
 1/1/2017 Version 1.3.0
 
-   Two new extensions: LambdaTestTiming and LambdaTestAsunc.
+   Two new extensions: LambdaTestTiming and LambdaTestAsync.
    Moved timing tests to LambdaTestTiming.
    Moved Akka Actor wrapper examples to LambdaTestAsync.
 
